# cmake-issue

./: CMakeLists.txt  main.c
lib/: CMakeLists.txt  lib.c  lib.h
